--- a/WindowStateSaver.WinUi3/WindowStateSaver.WinUi3.csproj
+++ b/WindowStateSaver.WinUi3/WindowStateSaver.WinUi3.csproj
@@ -6,7 +6,26 @@
     <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
     <UseWinUI>true</UseWinUI>
     <Nullable>enable</Nullable>
+    <Version>0.0.0</Version>
+    <Authors>StdEnku</Authors>
+    <Description>A library that provides a function to save information such as window size, position, and maximized state in WinUi3 in a Json file when exiting, and load it at the next startup to restore the previous state.</Description>
+    <Copyright>(c) 2023 StdEnku</Copyright>
+    <PackageTags>WinUi3;</PackageTags>
+    <RepositoryUrl>https://github.com/StdEnku/WindowStateSaver.WinUi3</RepositoryUrl>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="..\images\icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
       <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
